--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
 <body>
     <header class='masthead'>
         <p class='masthead-intro'>Hi I'm</p>
-        <h1 class='masthead-heading'>Your Name Here</h1>
+        <h1 class='masthead-heading'>Jada Arnett!</h1>
     </header>
     <section class="details">
       <h1>Introduction</h1>
       <p>Details here...</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Hackensack, New Jersey</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Kickboxing! I'm a part-time kickboxing instructor!</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I simply do not dream of labor.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Atlanta, Georgia</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to be a web developer because I love problem solving and would love a career where I can work remote.</p>
     </section>
 
     <footer id="footer">
