--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a beginner programmer looking forward to learning as much as I can during this bootcamp!</p>
       <h1>Where I'm From</h1>
       <p>Hackensack, New Jersey</p>
       <h1>What are your favorite hobbies?</h1>
